# chat_server

./: .gitignore  CMakeLists.txt  main.c
include/: childprocess.h  config.h  membermanager.h  parentprocess.h  processhandler.h
src/: childprocess.c  daemonize.c  membermanager.c  parentprocess.c
